# ChatRoom

./: .gitignore  LICENSE  README.md  about.md  ai_system.txt  db.py  doc_cmd.md  main.py  main_web.py  pyproject.toml  requirements.txt  settings.py  test.py
Database/: chatroom.db  users.json
__pycache__/: ._main.cpython-312.pyc.4311423328
