[project]
name = "chatroom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=4.0.1",
    "dbutils>=3.1.0",
    "fastapi>=0.115.12",
    "nicegui>=2.18.0",
    "pillow>=11.2.1",
    "pillow-heif>=0.22.0",
    "starlette>=0.46.2",
]
